# L2InterludeBot

./: README.md
libowybot/: CMakeLists.txt
libowybot/inc/: action_executor.hpp  alarm_module.hpp  antistuck_module.hpp  autoattack_module.hpp  beastfarm_data.hpp  binary_deserializer.hpp  binary_serializer.hpp  blacklist.hpp  bot_action_penalties.hpp  bot_confiuration.hpp  configuration_setter.hpp  craft_module.hpp  fishing_module.hpp  game_data_facade.hpp  grinder.hpp  item_use_module.hpp  mainloop_hook.hpp  manor_crops.hpp  movement_module.hpp  native_lineage_classes.hpp  network_table_hook.hpp  oop_module.hpp  party.hpp  party_buff_guard.hpp  picking_module.hpp  player_character.hpp  protocol.hpp  spell_casting_module.hpp  targeting_module.hpp
libowybot/src/: action_executor.cpp  alarm_module.cpp  antistuck_module.cpp  autoattack_module.cpp  beastfarm_data.cpp  blacklist.cpp  bot_action_penalties.cpp  bot_confiuration.cpp  configuration_setter.cpp  craft_module.cpp  fishing_module.cpp  game_data_facade.cpp  grinder.cpp  item_use_module.cpp  main.cpp  mainloop_hook.cpp  manor_crops.cpp  movement_module.cpp  network_table_hook.cpp  oop_module.cpp  party.cpp  party_buff_guard.cpp  picking_module.cpp  player_character.cpp  spell_casting_module.cpp  targeting_module.cpp
wuiksywidzets/: .clang-format  CMakeLists.txt
wuiksywidzets/inc/: add_beast_dialog.hpp  add_buff_dialog.hpp  add_craft_dialog.hpp  add_dos_dialog.hpp  add_item_dialog.hpp  add_manor_dialog.hpp  add_oop_dialog.hpp  add_spell_dialog.hpp  aes_boy.hpp  alarm_tab.hpp  base_tab.hpp  beastfarm_data.hpp  beastfarm_tab.hpp  bot_config.hpp  bounding_box_selection_panel.hpp  connector.hpp  craft_data.hpp  craft_tab.hpp  current_character_data.hpp  dos_and_donts_tab.hpp  event_identifiers.hpp  farming_tab.hpp  follow_tab.hpp  item_data.hpp  items_tab.hpp  main_frame.hpp  main_notebook.hpp  manor_data.hpp  manor_tab.hpp  map_tab.hpp  npc_data.hpp  out_of_party_tab.hpp  party_tab.hpp  pick_tab.hpp  relax_tab.hpp  skill_data.hpp  special_tricks_tab.hpp  spells_tab.hpp  targeting_tab.hpp  user_panel.hpp
wuiksywidzets/rsrc/: cut_itemname.sh  cut_recipes.sh  cut_skillname.sh  gennpcname.sh
wuiksywidzets/rsrc/manor/: gencrops.sh  genseeds.sh
wuiksywidzets/src/: add_beast_dialog.cpp  add_buff_dialog.cpp  add_craft_dialog.cpp  add_dos_dialog.cpp  add_item_dialog.cpp  add_manor_dialog.cpp  add_oop_dialog.cpp  add_spell_dialog.cpp  aes_boy.cpp  alarm_tab.cpp  beastfarm_data.cpp  beastfarm_tab.cpp  bounding_box_selection_panel.cpp  connector.cpp  craft_data.cpp  craft_tab.cpp  dos_and_donts_tab.cpp  farming_tab.cpp  follow_tab.cpp  item_data.cpp  items_tab.cpp  main.cpp  main_frame.cpp  main_notebook.cpp  manor_data.cpp  manor_tab.cpp  map_tab.cpp  npc_data.cpp  out_of_party_tab.cpp  party_tab.cpp  pick_tab.cpp  relax_tab.cpp  skill_data.cpp  special_tricks_tab.cpp  spells_tab.cpp  targeting_tab.cpp  user_panel.cpp
